# RL_for_TrafficLight_Control

./: .gitignore  README.md  baseline.json  baseline_results.json  eval_test.py  fixed_baseline.json  mp_baseline.json  pyproject.toml  rl_eval.json
docs/: Danh_gia.md  Explanation_Log_Std.md  MGMQ_Algorithm_Documentation.md  Parameter_Tuning_Guide.md  Preprocessing_Module_Documentation.md  Problem.md  Technical_PPO_Analysis.md  Training_Testing_Pipeline.md  Version_changes.md
docs/mgmq_v2/: algorithm_flow.md  architecture_overview.md  config_reference.md  input_output_spec.md  mgmq_v2.md  module_action_masking_dqn.md  module_action_masking_ppo.md  module_directional_graphsage.md  module_lane_level_gat.md  reward_functions.md  training_evaluation_flow.md
mp/: README.md  extract_net_info.py  extract_net_info_enhanced.py  extract_net_info_final.py  main.py  pyproject.toml  requirements.txt  zurich_net_info.json
scripts/: diagnose_action_flow.py  diagnose_rewards.py  diagnose_training.py  eval_mgmq_ppo.py  generate_demand_variants.py  preprocess_network.py  run_ablation.py  train_mgmq_ppo.py
src/: __init__.py
tests/: test_e2e_training_loop.py  test_environment_integration.py  test_eval_policy_application.py  test_frap_preprocessing.py  test_gat_adjacency_matrices.py  test_gat_layer.py  test_graphsage_bigru.py  test_masked_softmax_distribution.py  test_model_forward_pass.py  test_reward_normalization.py  verify_action_mask.py  verify_cycle_length.py
tools/: create_heavy_traffic_route.py  create_low_traffic_route.py  eval_baseline_reward.py  run_six_scenario_suite.py
(+2570 files in other folders)
